...
    }
    await wallet.watch(resolution.address);
    navigation.goBack();
  };

  return (
    <Screen testID='wallet-screen'>
      {wallet.account ? (
        <Card testID='wallet-account'>
          <Row style={{ justifyContent: 'space-between' }}>
            <View style={{ flexShrink: 1 }}>
              <Label>
                {wallet.canSign ? t('wallet.connected') : t('wallet.watching')}
              </Label>
              <Text variant='heading' testID='wallet-address'>
...
